# bam2ab1

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  read_ab1.py  run_script.sh  run_test_data.sh  run_test_data_plasimid_structure.sh  原理文档.md
scripts/: dump_channel_subreads.py  inspect_ab1.py  read_ab1.py  read_eha_reads.py
src/: ab1.rs  ab1_bak.rs  bam2ab1.rs  lib.rs  pascal_str.rs  utils.rs
src/ab1/: ab1_file.rs  data_process.rs  mod.rs  plp2ab1.rs
src/pileup_counter/: mod.rs  plp_from_records.rs
test-data/: Adaptor-barcode250-2.assembly.bam  Adaptor-barcode250-2.assembly.bam.bai  Adaptor-barcode250-2_plassembler_plasmids.fasta  Group_0_Adaptor-barcode201-1.consensus.fasta  Group_0_Adaptor-barcode201-1.sort.bam  Group_0_Adaptor-barcode201-1.sort.bam.bai  Group_0_Adaptor-barcode203-5_None.consensus.fasta  Group_0_Adaptor-barcode203-5_None.sort.bam  Group_0_Adaptor-barcode203-5_None.sort.bam.bai  Group_0_Adaptor-barcode295-2.consensus.fasta  Group_0_Adaptor-barcode295-2.sort.bam  Group_0_Adaptor-barcode295-2.sort.bam.bai  S22509070002-Epi5A-1.ab1  channel_340564.consensus.fasta  channel_340564.sort.bam  channel_340564.sort.bam.bai  channel_340564_subreads.bam  out.ab1
